added nature picture

--- a/start.html
+++ b/start.html
@@ -7,6 +7,7 @@
     <title></title>
     <h2>My start file is not index.html file</h2>
     <h3>Old Destination</h3>
+    <img src="download.png" alt="">
 </head>
 <body>
     
